# pixel

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
art/: pixel.blend  pixel1.blend
assets/: registry.json
assets/blueprints/: ground.glb  ground.meta.ron  level.glb  plane.glb
assets/levels/: World.assets.ron  World.glb  World.meta.ron
assets/shaders/: shader.wgsl
crates/blender_plugin/: Cargo.toml
crates/blender_plugin/src/: TODO.md  asset.rs  blend.rs  core.rs  lib.rs
src/: main.rs
src/dev/: core.rs  mod.rs  plugin.rs
src/game/: mod.rs  plugin.rs  test.rs
src/game/camera/: core.rs  mod.rs  plugin.rs
src/game/level/: core.rs  mod.rs  plugin.rs
src/game/player/: core.rs  input.rs  mod.rs  movement.rs  plugin.rs
src/game/shader/: core.rs  plugin.rs
