[package]
name = "pixel"
version = "0.1.0"
authors = ["monax-owo"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { workspace = true }
# bevy-inspector-egui = "0.27.0"
bevy_editor_pls = "0.10.0"
bevy_rapier2d = "0.27.0"
blenvy = "0.1.0-alpha.1"

[workspace]
resolver = "2"
members = [""]

[workspace.dependencies]
bevy = { version = "0.14.2", features = ["file_watcher", "dynamic_linking"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
